--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,8 @@ layout: compress
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ site.serverName }}</title>
     <meta name="description" content="{{ site.serverDescription }}">
-    <link rel="shortcut icon" href="{{ site.baseurl }}/media/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/media/apple-touch-icon.png">
+    <link rel="shortcut icon" href="{{ site.baseurl }}/media/logo.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/media/logo.png">
 
     <!-- don't show this site on search engines -->
     {% if site.showinSearchEngines == true %}
