--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -28,8 +28,8 @@ layout: default
     <div class="w-full sm:w-3/5 md:w-1/2">
         <div class="ccinfoframe mx-auto my-12 lg:float-right xl:mr-8 rounded-lg shadow-xl" title="{{ site.serverName }} Discord embed" style="background-color:#36393f;">
             <widgetbot
-                server="{{ site.discordServerID }}"
-                channel="{{ site.discordChannelID }}"
+                server="{{ 939017734300266547 }}"
+                channel="{{ 1046353483131011122 }}"
                 width="100%"
                 height="100%"
             ></widgetbot>
