--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -67,11 +67,11 @@ layout: compress
         </div>
         
         <!-- show status if no siteNav -->
-        {% if site.siteNav %}{% else %}
+        <!--{% if site.siteNav %}{% else %}-->
         <div id="serverStatus" class="text-gray-200 hidden md:block cursor-pointer"></div>
         {% endif %}
 
-        {% if site.siteNav %}{% else %}
+        <!--{% if site.siteNav %}{% else %}-->
         <!-- only show mobile status if no siteNav -->
         <div class="block md:hidden">
             <div id="serverStatusM" class="text-gray-200 py-2 md:py-4"></div>
