--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
 <div class="flex flex-wrap md:flex-row-reverse justify-center items-center text-center py-4">
     <div class="w-full lg:w-1/2">
         <h1 class="text-4xl text-gray-100 pt-12 lg:pt-0">{{ site.serverName }}</h1>
-        <h2 class="text-2xl text-gray-200 pt-6" id="serverVer">Minecraft Server</h2>
+        <h2 class="text-2xl text-gray-200 pt-6" id="serverVer">A Java/Bedrock Minecraft Server where we have lots of fun!</h2>
 
         <div class="rounded overflow-hidden w-full sm:w-4/5 md:w-3/4 mx-auto mt-10 mb-6">
             <div class="px-6 py-4">
@@ -28,8 +28,8 @@ layout: default
     <div class="w-full sm:w-3/5 md:w-1/2">
         <div class="ccinfoframe mx-auto my-12 lg:float-right xl:mr-8 rounded-lg shadow-xl" title="{{ site.serverName }} Discord embed" style="background-color:#36393f;">
             <widgetbot
-                server="{{ 939017734300266547 }}"
-                channel="{{ 1046353483131011122 }}"
+                server="{{ site.discordServerID }}"
+                channel="{{ site.discordChannelID }}"
                 width="100%"
                 height="100%"
             ></widgetbot>
