--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
 <div class="flex flex-wrap md:flex-row-reverse justify-center items-center text-center py-4">
     <div class="w-full lg:w-1/2">
         <h1 class="text-4xl text-gray-100 pt-12 lg:pt-0">{{ site.serverName }}</h1>
-        <h2 class="text-2xl text-gray-200 pt-6" id="serverVer">A Java/Bedrock Minecraft Server where we have lots of fun!</h2>
+        <h2 class="text-2xl text-gray-200 pt-6" id="serverVer">A Wonderful Minecraft Server!</h2>
 
         <div class="rounded overflow-hidden w-full sm:w-4/5 md:w-3/4 mx-auto mt-10 mb-6">
             <div class="px-6 py-4">
